# homie

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  hosts.rs  main.rs
